--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
                   </svg>
                 </div>
                 <h3 class="h1 mb-2">786+</h3>
-                <p class="fs-5 mb-0 text-secondary">Awwwards Winning</p>
+                <p class="fs-5 mb-0 text-secondary">Awards Winning</p>
               </div>
        
       </div>
@@ -507,9 +507,9 @@
                   <img class="img-fluid rounded rounded-circle mb-4 border border-5" loading="lazy" src="./assets/img/testimonial/testimonial-img-1.jpg" alt="Luna John">
                   <figcaption>
                     <div class="bsb-ratings text-warning mb-3" data-bsb-star="5" data-bsb-star-off="0"></div>
-                    <blockquote class="bsb-blockquote-icon mb-4">We were so impressed with the work they did for us. They were able to take our vision and turn it into a reality, and they did it all on time and within budget. We would highly recommend them to anyone looking for a reliable partner.</blockquote>
-                    <h4 class="mb-2">Luna John</h4>
-                    <h5 class="fs-6 text-secondary mb-0">UX Designer</h5>
+                    <blockquote class="bsb-blockquote-icon mb-4">Working with Salooj Yoosuf has greatly simplified our journey through the complexities of digital marketing expert . It’s a refreshing experience to collaborate with the top digital marketing strategist in calicut, Kerala, who truly cares about the success of his clients.</blockquote>
+                    <h4 class="mb-2">Swastika</h4>
+                    <h5 class="fs-6 text-secondary mb-0">psychologist </h5>
                   </figcaption>
                 </figure>
               </div>
@@ -522,8 +522,8 @@
                   <img class="img-fluid rounded rounded-circle mb-4 border border-5" loading="lazy" src="./assets/img/testimonial/testimonial-img-2.jpg" alt="Mark Smith">
                   <figcaption>
                     <div class="bsb-ratings text-warning mb-3" data-bsb-star="4" data-bsb-star-off="1"></div>
-                    <blockquote class="bsb-blockquote-icon mb-4">We were looking for a company that could help us develop a new website that was both visually appealing and user-friendly. We are so happy with the results, and we would highly recommend them to anyone looking for a new website.</blockquote>
-                    <h4 class="mb-2">Mark Smith</h4>
+                    <blockquote class="bsb-blockquote-icon mb-4">With the involvement of Salooj Yoosuf, our journey through the complexities of expert digital marketing has become much smoother. It is refreshing to work with the best digital marketing strategist in calicut, Kerala, who genuinely cares about the success of his clients.</blockquote>
+                    <h4 class="mb-2">arunima</h4>
                     <h5 class="fs-6 text-secondary mb-0">Marketing Specialist</h5>
                   </figcaption>
                 </figure>
@@ -537,8 +537,8 @@
                   <img class="img-fluid rounded rounded-circle mb-4 border border-5" loading="lazy" src="./assets/img/testimonial/testimonial-img-4.jpg" alt="Luke Reeves">
                   <figcaption>
                     <div class="bsb-ratings text-warning mb-3" data-bsb-star="5" data-bsb-star-off="0"></div>
-                    <blockquote class="bsb-blockquote-icon mb-4">We were looking for a company that could help us with our branding. We needed a website and marketing materials. They were able to create a brand identity that we loved. They worked with us to develop a logo that represented our company.</blockquote>
-                    <h4 class="mb-2">Luke Reeves</h4>
+                    <blockquote class="bsb-blockquote-icon mb-4">Finding a top digital marketing strategist in calicut, Kerala, can be challenging. However, hiring Salooj Yoosuf was a fantastic decision for us. His in-depth understanding of digital marketing trends has significantly contributed to our online success.</blockquote>
+                    <h4 class="mb-2">Nathasha</h4>
                     <h5 class="fs-6 text-secondary mb-0">Sales Manager</h5>
                   </figcaption>
                 </figure>
