--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
             <div class="card border-0 border-bottom border-primary shadow-sm">
               <div class="card-body p-4 p-xxl-5">
                 <figure>
-                  <img class="img-fluid rounded rounded-circle mb-4 border border-5" loading="lazy" src="./assets/img/testimonial/IMG-20240927-WA0039jpg" alt="Mark Smith">
+                  <img class="img-fluid rounded rounded-circle mb-4 border border-5" loading="lazy" src="./assets/img/testimonial/IMG-20240927-WA0039.jpg" alt="Mark Smith">
                   <figcaption>
                     <div class="bsb-ratings text-warning mb-3" data-bsb-star="4" data-bsb-star-off="1"></div>
                     <blockquote class="bsb-blockquote-icon mb-4">With the involvement of Salooj Yoosuf, our journey through the complexities of expert digital marketing has become much smoother. It is refreshing to work with the best digital marketing strategist in calicut, Kerala, who genuinely cares about the success of his clients.</blockquote>
@@ -534,7 +534,7 @@
             <div class="card border-0 border-bottom border-primary shadow-sm">
               <div class="card-body p-4 p-xxl-5">
                 <figure>
-                  <img class="img-fluid rounded rounded-circle mb-4 border border-5" loading="lazy" src="./assets/img/testimonial/20241026_130948jpg" alt="Luke Reeves">
+                  <img class="img-fluid rounded rounded-circle mb-4 border border-5" loading="lazy" src="./assets/img/testimonial/20241026_130948.jpg" alt="Luke Reeves">
                   <figcaption>
                     <div class="bsb-ratings text-warning mb-3" data-bsb-star="5" data-bsb-star-off="0"></div>
                     <blockquote class="bsb-blockquote-icon mb-4">Finding a top digital marketing strategist in calicut, Kerala, can be challenging. However, hiring Salooj Yoosuf was a fantastic decision for us. His in-depth understanding of digital marketing trends has significantly contributed to our online success.</blockquote>
